Setting the container to have visible overflow to avoid optimizePress issues.

--- a/css/flowplayer.css
+++ b/css/flowplayer.css
@@ -341,6 +341,7 @@
   font-size: 16px;
   position: relative;
   max-height: 100%;
+  overflow: visible;
   border-radius: .24em;
   background-position: center;
   background-repeat: no-repeat;
